--- a/MvcCoreAdoNet/Views/Hospitales/CreateHospital.cshtml
+++ b/MvcCoreAdoNet/Views/Hospitales/CreateHospital.cshtml
@@ -2,7 +2,7 @@
 
 <form method="post">
     <label>Id Hospital</label>
-    <input type="text" name="id" required/>
+    <input type="text" name="idhospital" required/>
     <label>Nombre</label>
     <input type="text" name="nombre" required/>
     <label>Dirección</label>
@@ -10,7 +10,7 @@
     <label>Teléfono</label>
     <input type="text" name="telefono" required/>
     <label>Camas</label>
-    <input type="text" name="numcamas" required/>
+    <input type="text" name="camas" required/>
     <button class="btn waves-effect waves-light">
         Nuevo hospital
     </button>
