--- a/MvcCoreAdoNet/Views/Hospitales/Index.cshtml
+++ b/MvcCoreAdoNet/Views/Hospitales/Index.cshtml
@@ -2,9 +2,15 @@
 
 <h1 class="header center orange-text">Lista Hospitales</h1>
 
+<a asp-controller="Hospitales"
+    asp-action="CreateHospital">
+    New Hospital
+</a>
+
 <table class="responsive-table highlight">
     <thead>
         <tr>
+            <th>Id Hospital</th>
             <th>Nombre</th>
             <th>Dirección</th>
             <th>Teléfono</th>
@@ -16,6 +22,7 @@
         @foreach (Hospital hospital in Model)
         {
             <tr>
+                <td>@hospital.IdHospital</td>
                 <td>@hospital.Nombre</td>
                 <td>@hospital.Direccion</td>
                 <td>@hospital.Telefono</td>
