--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                 Hospitales
             </a>
         </li>
+        <li>
+            <a asp-controller="Doctores"
+            asp-action="DoctoresEspecialidad">
+                Doctores
+            </a>
+        </li>
         <li><a href="#">Navbar Link 2</a></li>
         <li>
             <a id="menudropdown" class="dropdown-trigger" href="#!" data-target="dropdown1">
