--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -40,7 +40,13 @@
         <li>
             <a asp-controller="Doctores"
             asp-action="DoctoresEspecialidad">
-                Doctores
+                Doctores Especialidad
+            </a>
+        </li>
+        <li>
+            <a asp-controller="Doctores"
+            asp-action="DoctoresHospital">
+                Doctores Hospital
             </a>
         </li>
         <li><a href="#">Navbar Link 2</a></li>
